--- a/src/main/res/layout/discover_fragment.xml
+++ b/src/main/res/layout/discover_fragment.xml
@@ -1,6 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="搜索商品"
+            android:layout_centerInParent="true"
+            android:textSize="20sp"
+            android:padding="5dp"/>
+        <ImageView
+            android:id="@+id/image_grid"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/grid_icon"
+            android:layout_alignParentRight="true"
+            android:padding="10dp"
+            android:visibility="visible"/>
+        <ImageView
+            android:id="@+id/image_linear"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/lv_icon"
+            android:layout_alignParentRight="true"
+            android:padding="10dp"
+            android:visibility="gone"/>
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#666666"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/discover_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入关键字"
+            android:layout_weight="2"
+            android:layout_margin="10dp"/>
+        <Button
+            android:id="@+id/discover_btn_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="搜索"
+            android:layout_weight="8"
+            android:layout_margin="10dp"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#666666"/>
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:id="@+id/discover_recycle_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</LinearLayout>
