--- a/src/main/res/layout/grid_layout.xml
+++ b/src/main/res/layout/grid_layout.xml
@@ -9,6 +9,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@mipmap/ic_launcher"
+        android:layout_gravity="center"
         android:layout_margin="15dp"/>
     <TextView
         android:id="@+id/all_text_title"
