--- a/src/main/res/layout/home_page_fragment.xml
+++ b/src/main/res/layout/home_page_fragment.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -72,4 +75,6 @@
                 android:layout_height="match_parent" />
         </LinearLayout>
     </ScrollView>
+    <include layout="@layout/search_layout"/>
+    </FrameLayout>
 </LinearLayout>
