--- a/src/main/res/layout/activity_search.xml
+++ b/src/main/res/layout/activity_search.xml
@@ -1,9 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.lenovo.jd.view.activity.SearchActivity">
+    <include layout="@layout/search_title"></include>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="热搜"
+        android:textSize="22sp"
+        android:layout_margin="10dp"
+        android:textStyle="bold"/>
+    <com.example.lenovo.jd.view.flowLayout.FlowLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            style="@style/text_flag_01"
+            android:text="榨汁机" />
+
+        <TextView
+            style="@style/text_flag_01"
+            android:text="固态硬盘" />
+
+        <TextView
+            style="@style/text_flag_01"
+            android:text="篮球鞋" />
+
+        <TextView
+            style="@style/text_flag_01"
+            android:text="手机" />
+
+        <TextView
+            style="@style/text_flag_01"
+            android:text="手表" />
+
+        <TextView
+            style="@style/text_flag_01"
+            android:text="电脑" />
+
+        <TextView
+            style="@style/text_flag_01"
+            android:text="水杯" />
+
+        <TextView
+            style="@style/text_flag_01"
+            android:text="化妆品" />
+
+        <TextView
+            style="@style/text_flag_01"
+            android:text="面膜" />
+    </com.example.lenovo.jd.view.flowLayout.FlowLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:background="#f0f2f5"
+            android:layout_marginTop="10dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="历史搜索"
+            android:textSize="22sp"
+            android:layout_margin="10dp"
+            android:textStyle="bold"/>
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+        </ListView>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="60dp"
+            android:text="清空历史搜索"
+            android:textSize="24sp"/>
+    </LinearLayout>
+
+</LinearLayout>
