--- a/src/main/res/layout/shopping_cart_fragment.xml
+++ b/src/main/res/layout/shopping_cart_fragment.xml
@@ -11,7 +11,19 @@
         android:id="@+id/expand_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/login_immediately"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="请先登录账号"
+        android:textColor="#f00"
+        android:visibility="gone"
+        android:layout_weight="1"
+        android:textSize="24sp"
+        android:gravity="center"/>
 
     <include layout="@layout/bottom_item"/>
 
