--- a/src/main/res/layout/top_item.xml
+++ b/src/main/res/layout/top_item.xml
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/holo_red_light"
-    android:orientation="horizontal">
+    android:background="@android:color/holo_red_light">
 
 
-    <TextView
+    <!--<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="返回"
         android:textSize="25sp"
         android:padding="10dp"
         android:textColor="@android:color/white"
-        android:id="@+id/btnBack"/>
+        android:id="@+id/btnBack"/>-->
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-        android:padding="10dp"
         android:textColor="@android:color/white"
-        android:layout_weight="1"
-        android:gravity="center"
+        android:layout_centerInParent="true"
         android:text="购物车"/>
 
 
@@ -32,8 +29,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="编辑"
+        android:layout_alignParentRight="true"
         android:textColor="@android:color/white"
         android:textSize="25sp"
         android:padding="10dp"/>
 
-</LinearLayout>
+</RelativeLayout>
