--- a/src/main/res/layout/activity_mode_of_payment.xml
+++ b/src/main/res/layout/activity_mode_of_payment.xml
@@ -30,6 +30,7 @@
             android:layout_centerVertical="true"
             android:text="微信支付"/>
         <CheckBox
+            android:id="@+id/check_WeChat_Pay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -55,9 +56,11 @@
             android:layout_centerVertical="true"
             android:text="支付宝支付"/>
         <CheckBox
+            android:id="@+id/check_pay_by_Alipay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:checked="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
@@ -70,6 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
+            android:id="@+id/text_to_pay_for"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="去支付"
